<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexgato.amasdesconnect.sampledata.RegistrarmeActivity"

    >

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/cms_nombre"

                    />

                <EditText
                    android:id="@+id/editSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/cms_apellidos"
                    />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/cms_telefono"
                    />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/cms_insertEmail"
                    />

                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType=""
                    android:hint="Contraseña"
                    />

                <EditText
                    android:id="@+id/editRepetirPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repite_la_contrasena"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:id="@+id/Nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/cms_nacimiento"
                    />

                <Button
                    android:id="@+id/butonRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/Orange"
                    android:hint="@string/cms_textRegistrarme"
                    android:inputType="textPassword"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
