<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alexgato.amasdesconnect.sampledata.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            app:srcCompat="@drawable/corazon"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:id="@+id/ContentRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText

                android:id="@+id/insertEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/cms_insertEmail"
                />

            <EditText

                android:id="@+id/insertpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/cms_textpassword"
                android:visibility="visible" />

            <Button
                android:id="@+id/butonRegistrar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:background="@android:color/transparent"
                android:text="@string/cms_textRegistrarme" />

            <Button
                android:id="@+id/butonEntrar"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:background="@color/Orange"
                android:text="@string/cms_butonEntrar" />


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
